crates/sdk-derive/derive-core/src/snapshots/fluentbase_sdk_derive_core__event__tests__mixed_static_dynamic_data.snap
---
source: crates/sdk-derive/derive-core/src/event.rs
expression: generate(input)
---
impl Mixed {
    /// Solidity event signature.
    pub const SIGNATURE: &'static str = "Mixed(address,uint256,string,address[])";
    /// Keccak256 hash of signature, computed at compile-time.
    pub const SELECTOR: [u8; 32] = [
        104u8, 13u8, 224u8, 66u8, 250u8, 86u8, 81u8, 19u8, 19u8, 71u8, 122u8, 249u8,
        122u8, 144u8, 148u8, 78u8, 215u8, 230u8, 133u8, 208u8, 99u8, 171u8, 242u8, 65u8,
        31u8, 44u8, 221u8, 77u8, 182u8, 181u8, 214u8, 190u8,
    ];
    /// Emits this event as an EVM log.
    pub fn emit<SDK: fluentbase_sdk::SharedAPI>(
        &self,
        sdk: &mut SDK,
    ) -> Result<(), fluentbase_sdk::ExitCode> {
        let topics: [fluentbase_sdk::B256; 2usize] = [
            fluentbase_sdk::B256::new([
                104u8, 13u8, 224u8, 66u8, 250u8, 86u8, 81u8, 19u8, 19u8, 71u8, 122u8,
                249u8, 122u8, 144u8, 148u8, 78u8, 215u8, 230u8, 133u8, 208u8, 99u8,
                171u8, 242u8, 65u8, 31u8, 44u8, 221u8, 77u8, 182u8, 181u8, 214u8, 190u8,
            ]),
            {
                let topic = fluentbase_sdk::codec::encode_indexed_topic(&self.who)
                    .expect("encode indexed field");
                match topic {
                    fluentbase_sdk::codec::IndexedTopic::Word(word) => {
                        fluentbase_sdk::B256::new(word)
                    }
                    fluentbase_sdk::codec::IndexedTopic::Preimage(preimage) => {
                        fluentbase_sdk::B256::new(SDK::keccak256(&preimage).0)
                    }
                }
            },
        ];
        let data = {
            let mut buf = fluentbase_sdk::codec::bytes::BytesMut::new();
            let values = (self.amount.clone(), self.note.clone(), self.extra.clone());
            fluentbase_sdk::codec::SolidityABI::encode_function_args(&values, &mut buf)
                .expect("encode data fields");
            buf.freeze()
        };
        sdk.emit_log(&topics, &data).ok()
    }
}
